# playwright-plus-python-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/playwright_server/: server.py
